--- a/content/modules/ROOT/pages/chapter04.adoc
+++ b/content/modules/ROOT/pages/chapter04.adoc
@@ -76,7 +76,7 @@ git commit -m "Doc Update"
 
 image::90_Gitsign_Commit_Message.png[]
 
-* The browser will prompt you for your credentials.  Enter {user} for the *username* and {password} for the *password*.
+* The browser will prompt you for your credentials.  Enter `{user}` for the *username* and `{password}` for the *password*.
 
 image::91_Gitsign_Credentials_Prompt.png[]
 
