--- a/content/modules/ROOT/pages/chapter03.adoc
+++ b/content/modules/ROOT/pages/chapter03.adoc
@@ -83,7 +83,7 @@ git commit -m "Doc Update"
 
 image::90_Gitsign_Commit_Message.png[]
 
-* The browser will prompt you for your credentials.  Enter {user} for the username and {password} for the password.
+* The browser will prompt you for your credentials.  Enter `{user}` for the username and `{password}` for the password.
 
 image::91_Gitsign_Credentials_Prompt.png[]
 
@@ -142,7 +142,7 @@ image::115_Jenkins__Verify_Commit_Log.png[]
 * I've setup a task called *scan* task, we utilize a tool called link:https://www.sonarsource.com/products/sonarqube[*SonarQube*,window=_blank] to analyze the source code and provide reports based on its quality.
 * "We can view the scan results from the pipeline logs as we did before, or we could log in to *SonarQube* to get an in-depth report."
 * "Let's look at the *SonarQube* report this time," you decide.
-* To access *SonarQube*, you use the following https://sonarqube-sonarqube.{OPENSHIFT_CLUSTER_INGRESS_DOMAIN}[*URL*,window=_blank]  and log in with your credentials, **username:** {adminuser} and **password**: {password}.
+* To access *SonarQube*, you use the following https://sonarqube-sonarqube.{OPENSHIFT_CLUSTER_INGRESS_DOMAIN}[*URL*,window=_blank]  and log in with your credentials, **username:** `{adminuser}` and **password**: `{password}`.
 * You click on the project link in the *SonarQube* Dashboard.
 * "Good news! Our application has passed the validation test by *SonarQube*," you observe.
 
@@ -173,7 +173,7 @@ image::119_Jenkins_Upload_SBOM_To_CycloneDX.png[]
 
 image::120_Jenkins_Upload_SBOM_To_TPA.png[]
 
-* To access *Trusted Profile Analyzer (TPA)*, you use the following https://console-trusted-profile-analyzer.{OPENSHIFT_CLUSTER_INGRESS_DOMAIN}[*URL*,window=_blank] and log in with your credentials, **username**: {adminuser} and **password**: {password}.
+* To access *Trusted Profile Analyzer (TPA)*, you use the following https://console-trusted-profile-analyzer.{OPENSHIFT_CLUSTER_INGRESS_DOMAIN}[*URL*,window=_blank] and log in with your credentials, **username**: `{adminuser}` and **password**:`{password}`.
 
 * "You can view the vulnerabilities and recommended remediation inside the SBOM we just uploaded to **Trusted Profile Analyzer (TPA)**," you explain, clicking **Search** in the left navigation menu.
 
