--- a/content/modules/ROOT/pages/chapter02.adoc
+++ b/content/modules/ROOT/pages/chapter02.adoc
@@ -22,7 +22,7 @@ NOTE: It may take the application a few minutes to start after the script comple
 
 image::29_Deploy_Insecure_Application.png[]
 
-* You switch back to **RHDH** and select the **Topology** view tab."
+* You switch back to **RHDH** and select the **Topology** view tab, saying, "This view lets us visualize every pod deployed in our OpenShift project."
 
 * You click the route linked to the **insecured-app** pod to open the application in a new browser tab.
 
